src/tests/test-src/errors/E87-fn-ptr-unsupported.syntran
// E87: fn-ptr-unsupported
// Cannot take a function pointer to an intrinsic function

let f = println;
